--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./src/bundle.js"></script>
     <link rel="stylesheet" href="./stylesheet/application.css">
     <link rel="stylesheet" href="./stylesheet/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
     <meta charset="utf-8">
     <title>Alarm Clock</title>
   </head>
@@ -45,5 +43,10 @@
           <div class="alarm-el">No Alarms</div>
       </div>
     </div>
+    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/alarmapp.js"></script>
+    <script type="module" src="./src/alarm.js"></script>
+    <script type="module" src="./src/alarmview.js"></script>
+    <script type="module" src="./src/alarmcontroller.js"></script>
   </body>
 </html>
